--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <link rel="manifest" href="site.webmanifest">
  <link rel="apple-touch-icon" href="icon.png">
  <!-- Place favicon.ico in the root directory -->
-
+ <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet"> 
  <link rel="stylesheet" href="css/normalize.css">
  <link rel="stylesheet" href="css/main.css">
 </head>
@@ -23,7 +23,7 @@
  <!--
  ~~~~~~~~~~ Start header ~~~~~~~~~~~~~~
  -->
- <header>
+ <header class="dark twhite">
    <section>
      <h1>Thomas Gossart Développeur Symfony</h1>
      <p>Passioné par la POO et particulièrement Symfony, je cherche une entreprise capable de m'offrir de nouveaux challenges</p>
@@ -40,7 +40,7 @@
  -->
  <main>
  <!-- Aside with skills -->
-   <aside>
+   <aside class="light">
      <article>
        <h4>Un titre</h4>
        <ul>
